# AxiomStream

./: .dockerignore  .gitattributes  .gitignore  AI_AUDIT_SYSTEM.md  ARCHITECTURE_NOTES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SERVICES.md  dashboard.py  locustfile.py  metrics_mesh.py  prometheus.yml  requirements.txt  setup.sh  test_engine.py
.github/workflows/: benchmark.yml  ci.yml  docker-ci.yml  lint.yml  python-app.yml  release.yml
AxiomStream/: .gitignore  ARCHITECTURE_NOTES.md  requirements.txt
AxiomStream/.github/workflows/: benchmark.yml  ci.yml  container-publish.yml  python-package.yml
AxiomStream/src/engine/: symbolic_solver.py
AxiomStream/src/infrastructure/: bot_audit.py  database_pool.py  master_pipeline.py.save
AxiomStream/tests/: test_symbolic_engine.py
elite_mesh/: app.py
src/bindings/: python_bindings.cpp
src/engine/: symbolic_solver.py
src/infrastructure/: bot_audit.py  master_pipeline.py  orchestrator.py  streaming_bridge.py
src/pipeline/: master_pipeline.py
streamlit_app/: app.py  config.toml
tests/: test_symbolic_engine.py
